# MuseLoop

./: .env.example  .gitignore  BuildPlan.md  Dockerfile  Dockerfile.gpu  LICENSE  Makefile  README.md  claude_desktop_config.json  docker-compose.yml  pyproject.toml
examples/briefs/: brand_video.json  music_viz.json  sci_fi_trailer.json
prompts/: critic_agent.md  director_agent.md  memory_agent.md  research_agent.md  script_agent.md
src/museloop/: __init__.py  cli.py  config.py
src/museloop/agents/: base.py  critic.py  director.py  memory.py  research.py  script.py
src/museloop/core/: brief.py  graph.py  loop.py  state.py
src/museloop/export/: __init__.py  presets.py  renderer.py
src/museloop/llm/: base.py  claude.py  factory.py  openai_compat.py
src/museloop/mcp/: __init__.py  handlers.py  job_state.py  server.py
src/museloop/memecoin/: __init__.py  generator.py
src/museloop/skills/: audio_gen.py  base.py  captions.py  editing.py  flux_gen.py  image_gen.py  img2img.py  registry.py  tts.py  upscale.py  video_gen.py
src/museloop/templates/: __init__.py  base.py  registry.py
src/museloop/ui/: __init__.py  progress.py
tests/: conftest.py
tests/integration/: test_graph.py  test_loop.py
tests/unit/: test_agents.py  test_base_agent.py  test_brief.py  test_cli.py  test_config.py  test_director.py  test_export.py  test_file_io.py  test_git_ops.py  test_graph_routing.py  test_job_manager.py  test_llm_factory.py  test_mcp_handlers.py  test_memecoin.py  test_new_skills.py  test_registry.py  test_skills.py  test_templates.py  test_vision.py  test_web_routes.py
(+33 files in other folders)
